aws-laravel/terraform/vpc_internet_gateway.tf
# --------------------------------------
# Internet Gateway
# --------------------------------------
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name    = "${var.project}-igw"
    Project = var.project
    Env     = var.environment
  }
}
